@@ -1,5 +1,10 @@
 2008-12-15  Bastien Nocera  <hadess@hadess.net>
 
+	* data/totem.ui: Move the subtitle download
+	placeholder to the correct location (Helps: #561085)
+
+2008-12-15  Bastien Nocera  <hadess@hadess.net>
+
 	* bindings/python/totem.defs:
 	* src/totem-object.c (totem_set_current_subtitle):
 	* src/totem.h: Add a way to set the subtitle for the currently
